# Intro-to-MI-Project_1

./: ANN.ipynb  Astrid_Notes.py  Classfication_CV.py  Compare_with_cross_validation.ipynb  README.md  ann_validate.py  check_data.ipynb  classification.ipynb  dataset_visualization.ipynb  k.ipynb  kFoldSplitter.ipynb  loading_the_data.ipynb  pca.ipynb  pyproject.toml  regression.ipynb  regression_lambda.ipynb  report_all.ipynb  report_all.py  rlr_validate_custom.py
Project_2/: ANN.py  Compare_with_cross_validation.py  classification.py  project_2_all.py  regression_lambda.py
